main to list y deployment

--- a/web/appraisal/templates/appraisal/annex_photo.html
+++ b/web/appraisal/templates/appraisal/annex_photo.html
@@ -28,7 +28,7 @@
         </div>
         <div class="col-2 text-right">
           {% if photo.photo %}
-          {% include 'main/btn_delete.html' %}
+          {% include 'list/btn_delete.html' %}
           {% endif %}
         </div>
       </div>
