--- a/web/appraisal/templates/appraisal/deleted.html
+++ b/web/appraisal/templates/appraisal/deleted.html
@@ -1,4 +1,4 @@
-{% extends "main/base.html" %}
+{% extends "list/base.html" %}
 {% load static %}
 
 {% block head %}
@@ -16,7 +16,7 @@
 
 <script>
   function redirect(){
-     window.location.href = "/main/";
+     window.location.href = "/list/";
   }
   setTimeout(redirect, 3000); //2000 is equivalent to 2 seconds
 </script>
