--- a/web/appraisal/templates/appraisal/logbook.html
+++ b/web/appraisal/templates/appraisal/logbook.html
@@ -3,7 +3,7 @@
     <div class="col">
     </div>
     <div class="col-8">
-      {% include 'main/logbook.html' with a=1 %}
+      {% include 'list/logbook.html' with a=1 %}
     </div>
     <div class="col">
     </div>
