--- a/web/evaluation/templates/appraiser_evaluation.html
+++ b/web/evaluation/templates/appraiser_evaluation.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'list/base.html' %}
 
 {% load static %}
 
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-{% include "main/appraisals.html" %}
+{% include "list/appraisals.html" %}
 
 <script>
     $('.appraiser').click(function() {
