--- a/web/list/templates/list/logbook.html
+++ b/web/list/templates/list/logbook.html
@@ -330,7 +330,7 @@
       <div id="historial">
         <ul id="comment_list" class="list-group">
           {% for comment in comments %}
-            {% include 'main/comment.html' %}
+            {% include 'list/comment.html' %}
           {% endfor %}
         </ul>
       </div>
