--- a/web/list/templates/list/modals.html
+++ b/web/list/templates/list/modals.html
@@ -1,17 +1,17 @@
 <div class="modal fade" id="modal_assign_tasador" tabindex="-2" role="dialog" aria-hidden="true">
-  {% include 'main/modals_assign_tasador.html' %}
+  {% include 'list/modals_assign_tasador.html' %}
 </div>
 
 <div class="modal fade" id="modal_assign_visador" tabindex="-2" role="dialog" aria-hidden="true">
-  {% include 'main/modals_assign_visador.html' %}
+  {% include 'list/modals_assign_visador.html' %}
 </div>
 
 <div class="modal fade" id="modal_archive" tabindex="-1" role="dialog" aria-hidden="true">
-  {% include 'main/modals_archive.html' %}
+  {% include 'list/modals_archive.html' %}
 </div>
 
 <div class="modal fade" id="modal_evaluate" tabindex="-2" role="dialog" aria-labelledby="label" aria-hidden="true">
-  {% include 'main/modals_evaluate.html' %}
+  {% include 'list/modals_evaluate.html' %}
 </div>
 
 
