--- a/web/appraisal/templates/appraisal/main.html
+++ b/web/appraisal/templates/appraisal/main.html
@@ -1,13 +1,13 @@
-{% extends "main/base.html" %}
+{% extends "list/base.html" %}
 
 {% load tabs %}
 
 {% block head %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'appraisal/css/app.css' %}">
-<link rel="stylesheet" href="{% static 'main/css/logbook.css' %}">
-<script src="{% static "main/js/modal_assign_tasador.js" %}" type="text/javascript"></script>
-<script src="{% static "main/js/tools.js" %}" type="text/javascript"></script>
+<link rel="stylesheet" href="{% static 'list/css/logbook.css' %}">
+<script src="{% static "list/js/modal_assign_tasador.js" %}" type="text/javascript"></script>
+<script src="{% static "list/js/tools.js" %}" type="text/javascript"></script>
 {% endblock head %}
 
 {% block content %}
