--- a/web/archive/templates/archive/appraisals_search_tr.html
+++ b/web/archive/templates/archive/appraisals_search_tr.html
@@ -8,7 +8,7 @@
   <small><span class="solicitanteCodigo">{{ appraisal.solicitanteCodigo }}</span></small>
 </td>
 <td class="propertyType" style="text-align:center;">
-  {% include 'main/td_property_type_icon.html' %}
+  {% include 'list/td_property_type_icon.html' %}
 </td>
 <td>
   <a href="{{appraisal.url}}" class="address" style="{{appraisal.in_conflict|yesno:"font-weight:800;color:red;,"}}">
@@ -55,14 +55,14 @@
 </td>
 <td style="text-align:right;">
   {% with table="not_assigned" %}
-    {% include 'main/btn_logbook.html' %}
+    {% include 'list/btn_logbook.html' %}
   {% endwith %}
   {% if appraisal.state == appraisal.STATE_ARCHIVED %}
     {% with class="btn_unarchive_appraisal_modal" %}
-      {% include 'main/btn_unarchive.html' %}
+      {% include 'list/btn_unarchive.html' %}
     {% endwith %}
     {% with class="btn_delete_appraisal_modal" %}
-      {% include 'main/btn_delete.html' %}
+      {% include 'list/btn_delete.html' %}
     {% endwith %}
   {% endif %}
 </td>
