--- a/web/archive/templates/archive/archive.html
+++ b/web/archive/templates/archive/archive.html
@@ -1,4 +1,4 @@
-{% extends "main/base.html" %}
+{% extends "list/base.html" %}
 
 {% load static %}
 
@@ -7,7 +7,7 @@
 	{% load static %}
 
 	<link rel="stylesheet" href="{% static 'archive/css/archive.css' %}">
-	<link rel="stylesheet" href="{% static 'main/css/table_search.css' %}">
+	<link rel="stylesheet" href="{% static 'list/css/table_search.css' %}">
 
 {% endblock %}
 
@@ -101,7 +101,7 @@
 
 {% include 'archive/modals.html' %}
 
-<script src="{% static 'main/js/tools.js' %}" type="text/javascript"></script>
+<script src="{% static 'list/js/tools.js' %}" type="text/javascript"></script>
 
 <script>
 	$("#btn_search").on('click',function(e) {
