--- a/web/create/templates/create/index.html
+++ b/web/create/templates/create/index.html
@@ -1,4 +1,4 @@
-{% extends "main/base.html" %}
+{% extends "list/base.html" %}
 
 {% load static %}
 
@@ -388,7 +388,7 @@
    </form>
 </div>
 
-<script src="{% static 'main/js/tools.js' %}" type="text/javascript"></script>
+<script src="{% static 'list/js/tools.js' %}" type="text/javascript"></script>
 
 <script>
 
