--- a/web/list/templates/list/base.html
+++ b/web/list/templates/list/base.html
@@ -13,9 +13,9 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 
 
-<link rel="stylesheet" type="text/css" href="{% static 'main/css/base.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'main/css/loading.css' %}"/>
-<link rel="stylesheet" type="text/css" href="{% static 'main/css/loading-btn.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'list/css/base.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'list/css/loading.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'list/css/loading-btn.css' %}"/>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -56,14 +56,14 @@
 
 <body>
 
-{% include "main/header.html" %}
+{% include "list/header.html" %}
 
 <div id="content">
 {% block content %}
 {% endblock content %}
 </div>
 
-{% include "main/footer.html" %}
+{% include "list/footer.html" %}
 
 </body>
 
