--- a/web/list/templates/list/comment.html
+++ b/web/list/templates/list/comment.html
@@ -25,7 +25,7 @@
       {% if "asignador" in groups or request.user.is_superuser %}
         {% if comment.deletable %}
           {% with class="btn_delete_comment" %}
-            {% include 'main/btn_delete.html' %}
+            {% include 'list/btn_delete.html' %}
           {% endwith %}
         {% endif %}
       {% endif %}
