--- a/web/list/templates/list/header.html
+++ b/web/list/templates/list/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
   {% if user.is_authenticated %}
-  <a class="navbar-brand" href="/main/">TASADOR</a>
+  <a class="navbar-brand" href="/list/">TASADOR</a>
   {% else %}
   <a class="navbar-brand" href="/">TASADOR</a>
   {% endif %}
@@ -13,7 +13,7 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/main/">Tasaciones <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/list/">Tasaciones <span class="sr-only">(current)</span></a>
       </li>
       {% if perms.appraisal.add_appraisal %}
       <li class="nav-item">
