--- a/web/square/templates/square/index.html
+++ b/web/square/templates/square/index.html
@@ -1,4 +1,4 @@
-{% extends "main/base.html" %}
+{% extends "list/base.html" %}
 {% load static %}
 {% block head %}
   <link rel="stylesheet" href="{% static 'square/css/square.css' %}">
