--- a/web/user/templates/user/email_solicitud.html
+++ b/web/user/templates/user/email_solicitud.html
@@ -10,6 +10,6 @@
         	<p>Tipo de tasación: {{appraisal.get_tipoTasacion_display}}</p>
       		<p>Dirección: {{appraisal.real_estates.first.address}}</p>
       	</div>
-        <p>Para ver más detalles y rechazar o aceptar esta solicitud, haga <a href="http://127.0.0.1:8000/main/">click aquí</a>.</p>
+        <p>Para ver más detalles y rechazar o aceptar esta solicitud, haga <a href="http://127.0.0.1:8000/list/">click aquí</a>.</p>
     </body>
 </html>
