--- a/web/user/templates/user/password_reset_done.html
+++ b/web/user/templates/user/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends 'main/base.html' %}
+{% extends 'list/base.html' %}
 {% block content %}
 <p>Te enviaremos un correo para reestablecer tu contraseña.</p>
 {% endblock %}
