--- a/web/home/templates/home/index.html
+++ b/web/home/templates/home/index.html
@@ -9,8 +9,8 @@
 		<div class="col-1">
 		</div>
 			<div class="col-7">
-			<h1 class="display-4 mt-5">Tasaciones centralizadas</h1>
-			<p class="lead"> Tasador es una plataforma para realizar tasaciones. Encuentre los datos que necesita, realize sus informes y exporte en los formatos que requiera. </p>
+			<h1 class="display-4 mt-5">Tasaciones inteligentes</h1>
+			<p class="lead"> Sus tasaciones centralizadas, conectadas con las fuentes relevantes. </p>
 		</div>
 		<div class="col-3">
 			{% include "login_form.html" %}
