--- a/web/list/templates/list/appraisals_table_header.html
+++ b/web/list/templates/list/appraisals_table_header.html
@@ -17,6 +17,9 @@
     {% elif state == 5 %}
     <th scope="col" style="width:100px;">Entrega</th>
     <th scope="col" style="width:100px;"></th>
+    {% elif state == 6 %}
+    <th scope="col" style="width:100px;">Entrega</th>
+    <th scope="col" style="width:70px;"></th>
     {% else %}
     <th scope="col" style="width:100px;">Entrega</th>
     <th scope="col" style="width:70px;"></th>
