--- a/web/list/templates/list/footer.html
+++ b/web/list/templates/list/footer.html
@@ -1,6 +1,6 @@
 <div id="footer">
 	<div class="container">
-		<p><small>© Data Urbana SpA (a0.01) {% now "jS F Y" %}</small></p>
+		<p><small>© Data Urbana SpA (b0.1) {% now "jS F Y" %}</small></p>
 	</div>
 </div>
 <script>
