--- a/web/templates/login_form.html
+++ b/web/templates/login_form.html
@@ -21,8 +21,8 @@
 					Ingresar contraseña
             	</div>
 			</div>
-			<p><a href="{% url 'user:password_reset' %}">Olvidó su contraseña?</a></p>
-			<button class="btn btn-primary btn-lg btn-block">Login</button>
+			<p style="text-align:center;font-size:0.8em;"><a href="{% url 'user:password_reset' %}">¿Olvidó su contraseña?</a></p>
+			<button class="btn btn-primary btn-lg btn-block">Ingresar</button>
 		</form>
 	</div>
 </div>
