--- a/web/user/templates/user/password_reset_complete.html
+++ b/web/user/templates/user/password_reset_complete.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 
-<h1>La contraseña ha sido cambiada.</h1>
-<p><a href="{% url 'login' %}">¿Desea ingresar de nuevo?</a></p>
+<div style="margin-left:auto;margin-right:auto;width:400px;">
+
+<div class="alert alert-info">La contraseña ha sido cambiada.</div>
+
+</div>
 
 {% endblock %}
