--- a/web/user/templates/user/password_reset_done.html
+++ b/web/user/templates/user/password_reset_done.html
@@ -1,4 +1,8 @@
 {% extends 'list/base.html' %}
 {% block content %}
-<p>Te enviaremos un correo para reestablecer tu contraseña.</p>
+<div style="margin-left:auto;margin-right:auto;width:400px;">
+<div class="alert alert-info">
+    Te enviamos un correo electrónico para reestablecer tu contraseña.
+</div>
+</div>
 {% endblock %}
