--- a/web/evaluation/templates/appraiser_evaluation.html
+++ b/web/evaluation/templates/appraiser_evaluation.html
@@ -1,10 +1,21 @@
 {% extends 'list/base.html' %}
 
+{% block title %}Tasador • Tasadores{% endblock %}
+
 {% load static %}
 
 {% block content %}
 
 <div class="container mb-4" style="max-width:100%">
+
+    <div class="row">
+        <div class="col-md-1">
+        </div>
+        <div class="col-md-11">
+            <h5 class="mb-4">Tasadores</h5>
+        </div>
+    </div>
+
     <div class="card">
         <div class="card-body">
             {% include 'appraiser_list.html' %}
