--- a/web/list/static/list/css/base.css
+++ b/web/list/static/list/css/base.css
@@ -2,14 +2,14 @@ html, body {
   margin: 0;
   padding: 0;
   background: #000;
-  min-height: 100%;
+  height: 100vh;
 }
 
 #content {
   font-family: Lucida Grande, Helvetica, sans-serif;
   background: #fff;
   margin: 0;
-  height: 100%;
+  min-height: 100vh;
   padding: 0px;
   padding-top: 2em;
   padding-bottom: 2em;
@@ -114,4 +114,12 @@ button:focus {outline:0;}
   border-width: 1px;
   border-color: #007bff!important;
   color: #d11;
+}
+
+.navbar-brand {
+  font-family: 'Open Sans'
+}
+
+#content {
+  background-color: #efefef;
 }
