--- a/web/list/static/list/css/logbook.css
+++ b/web/list/static/list/css/logbook.css
@@ -16,3 +16,12 @@ span.line {
   background-color: #fff;
   padding: 0 1em;
 }
+
+p.text-right {
+  color: #777;
+}
+
+span.text-right {
+  color: #777;
+  vertical-align: -webkit-baseline-middle;
+}
