--- a/web/list/templates/list/appraisals.html
+++ b/web/list/templates/list/appraisals.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 
 <script src="{% static "list/js/modal_assign_tasador.js" %}" type="text/javascript"></script>
@@ -17,11 +16,29 @@
   ajax_enviar_a_cliente_url = "{% url 'ajax_enviar_a_cliente_url' %}"
   ajax_devolver_a_visador_url = "{% url 'ajax_devolver_a_visador_url' %}"
   ajax_solve_conflict_url = "{% url 'ajax_solve_conflict_url' %}"
+  ajax_upload_report_url = "{% url 'ajax_upload_report_url' %}"
+  ajax_mark_as_returned_url = "{% url 'ajax_mark_as_returned_url' %}"
+  ajax_get_appraisal_row_url = "{% url 'ajax_get_appraisal_row_url' %}"
 </script>
 
 {% load custom_tags %}
 
 <div class="container" style="max-width:100%">
+
+
+<!-- RETURNED -->
+
+<div class="card mb-1 border border-danger" id="div_returned" style="display:none;">
+  <div class="card-body">
+    <p class="card-title" style="color:#dc3545">Tasaciones devueltas</p>
+    <div class="alert alert-primary" role="alert" id="div_alert_table_returned" style="display: none;">
+      No hay tasaciones devueltas
+    </div>
+    <table class="table table-sm table-borderless" id="table_returned" style="display:none;font-size:0.8em;">
+      {% include 'list/appraisals_table_returned.html' %}
+    </table>
+  </div>
+</div>
 
 <!-- NOT ASSIGNED -->
 
@@ -153,6 +170,8 @@
         success: function (data) {
           $('#logbook').find('.modal-body').html($.trim(data));
           $("#in_appraisal_id").val(appraisal_id); // hidden input
+          console.log(table)
+          $("input#table_id").attr("value",table);
           tr.removeClass("notification")
           $('#logbook').modal('show');
           if (table == "not_accepted") {
@@ -380,6 +399,13 @@
       $("#table_imported").toggle()
     } else {
       $("#div_alert_table_imported").toggle()
+    }
+
+    appraisals_returned_n = {{appraisals_returned|length}}
+    if (appraisals_returned_n > 0) {
+      $("#table_returned").toggle()
+    } else {
+      $("#div_returned").hide()
     }
 
     // Actions.
