--- a/web/list/templates/list/base.html
+++ b/web/list/templates/list/base.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+<title>
+{% block title %}{% endblock %}
+</title>
 <head>
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -39,6 +42,12 @@
 
 <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
+<link rel="shortcut icon" href="{% static 'list/favicon.png' %}">
+<link rel="icon" href="{% static 'list/favicon.png' %}">
+
 
 <!--
 <link href="http://cdn.pydata.org/bokeh/release/bokeh-1.0.0.min.css" rel="stylesheet" type="text/css">
