--- a/web/list/templates/list/index.html
+++ b/web/list/templates/list/index.html
@@ -1,4 +1,5 @@
 {% extends "list/base.html" %}
+{% block title %}Tasador{% endblock %}
 {% load static %}
 {% block head %}
   <link rel="stylesheet" href="{% static 'list/css/main.css' %}">
