--- a/web/user/templates/user/password_reset_confirm.html
+++ b/web/user/templates/user/password_reset_confirm.html
@@ -2,8 +2,10 @@
 
 {% block content %}
 
+<div style="margin-left:auto;margin-right:auto;width:400px;">
+
     {% if validlink %}
-        <p>Ingrese y confirme su nueva contraseña.</p>
+        <div class="alert alert-info">Ingrese y confirme su nueva contraseña.</div>
         <form action="" method="post">
             <div style="display:none">
                 <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
@@ -29,5 +31,7 @@
         <h1>Error en generación de nueva contraseña</h1>
         <p>El link ya ha sido utilizado, pruebe de nuevo desde el principio.</p>
     {% endif %}
+
+</div>
 
 {% endblock %}
