--- a/web/user/templates/user/password_reset_form.html
+++ b/web/user/templates/user/password_reset_form.html
@@ -2,10 +2,20 @@
 
 {% block content %}
 
+<div style="margin-left:auto;margin-right:auto;width:400px;">
+
+<div class="alert alert-info">
+<p style="text-align:left"> Para recuperar su contraseña, por favor introduzca el correo electrónico que utilizó para registrarse. </p>
+</div>
+
 <form action="" method="post">{% csrf_token %}
     {% if form.email.errors %} {{ form.email.errors }} {% endif %}
-        <p>{{ form.email }}</p>
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password" />
+    <label>Email</label>
+    {{ form.email }}
+    </br>
+    <input type="submit" class="btn btn-dark btn-block" value="Resetear contraseña" />
 </form>
+
+</div>
 
 {% endblock %}
